unpackaged/main/default/objects/ETCAR_Car_Features__c/ETCAR_Car_Features__c.object-meta.xml
<CustomObject>
    <label>Car Features</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Car Features Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>