unpackaged/main/default/objects/ETCAR_Car_Features__c/fields/ETCAR_Active__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>