unpackaged/main/default/objects/ETCAR_Car_Features__c/fields/ETCAR_Features__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Features__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Features</label>
    <referenceTo>ETCAR_Features__c</referenceTo>
    <relationshipLabel>Car Features</relationshipLabel>
    <relationshipName>Car_Features</relationshipName>
    <type>Lookup</type>
</CustomField>