unpackaged/main/default/objects/ETCAR_Car_Features__c/fields/ETCAR_Price__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Price__c</fullName>
    <formula>ETCAR_Features__r.ETCAR_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>