unpackaged/main/default/objects/ETCAR_Car_Features__c/fields/ETCAR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>